# rust-web-calculator

./: Cargo.toml
src/: main.rs
templates/: index.html.hbs
