[package]
name = "rust_web_calculator"
version = "0.1.0"
authors = ["Bill Yu <han.yu@duke.edu>"]

[dependencies]
rocket = "0.3.12"
rocket_codegen = "0.3.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]